--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
+    "bcryptjs": "^3.0.3",
+    "next": "15.5.12",
+    "next-auth": "^5.0.0-beta.30",
+    "pg": "^8.19.0",
+    "prisma": "^7.4.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint-config-next": "15.5.12",
     "tailwindcss": "^4"
   }
 }
