user backend implemented

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,13 @@ NEXTAUTH_SECRET="your-nextauth-secret-here"
 NODE_ENV="development"
 APP_URL="http://localhost:3000"
 
+# Email Configuration (SMTP)
+EMAIL_HOST="smtp.gmail.com"
+EMAIL_PORT="587"
+EMAIL_USER="your-email@gmail.com"
+EMAIL_PASS="your-app-password"
+EMAIL_FROM="FleetFlow <noreply@fleetflow.com>"
+
 # API Keys (if needed)
 # STRIPE_SECRET_KEY="sk_test_..."
 # STRIPE_PUBLISHABLE_KEY="pk_test_..."
