--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.3",
     "next": "15.5.12",
     "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^7.0.13",
     "pg": "^8.19.0",
     "prisma": "^7.4.1",
     "react": "19.0.0",
