frontend for auth module created

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 # For PostgreSQL (recommended for production):
 DATABASE_URL="postgresql://username:password@localhost:5432/fleetflow?schema=public"
 
-# For Supabase (PostgreSQL):
-# DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres"
+# For Supabase (PostgreSQL with SSL):
+# DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres?sslmode=require&sslaccept=accept_invalid_certs"
 
 # For local development with Prisma Postgres:
 # DATABASE_URL="prisma+postgres://localhost:51213/?api_key=your_api_key_here"
