--- a/package.json
+++ b/package.json
@@ -12,20 +12,27 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
+    "framer-motion": "^12.34.3",
+    "lucide-react": "^0.575.0",
     "next": "15.5.12",
     "next-auth": "^5.0.0-beta.30",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
     "pg": "^8.19.0",
     "prisma": "^7.4.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "zod": "^4.3.6"
+    "react-hook-form": "^7.71.2",
+    "zod": "^4.3.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.27",
     "eslint": "^9",
     "eslint-config-next": "15.5.12",
-    "tailwindcss": "^4"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
