--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.71.2",
+    "recharts": "^3.7.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
