--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
@@ -32,7 +33,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.27",
     "eslint": "^9",
-    "eslint-config-next": "15.5.12",
+    "eslint-config-next": "^15.5.12",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19"
   }
