--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "seed": "node prisma/seed.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
@@ -15,6 +19,7 @@
     "@prisma/client": "^7.4.1",
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.3.1",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
     "next": "15.5.12",
